tests/ui/endpoint/non_custom_uri_attribute.stderr
error: `uri` can only be used on custom endpoints
 --> tests/ui/endpoint/non_custom_uri_attribute.rs:8:12
  |
8 | #[read_all(uri = "custom_read")]
  |            ^^^
